--- a/flaskr/templates/account.html
+++ b/flaskr/templates/account.html
@@ -28,6 +28,7 @@
         <input type="file" id="picture" name="picture"><hr><br>
         <input type="submit" value="Submit">
     </form>
+    <a href="{{ url_for('delete_account') }}" class="btn btn-danger">Delete Account</a><br>
 </div>
 </body>
 {% endblock %}
