--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -10,7 +10,7 @@
 <div class="main-body">
     <hr>
     <h1>ConsoleNET shipping</h1>
-    <img src="../static/assets/companyLogo.png" alt="Company Logo" width="320" height="320"/>
+    <img src="../static/assets/companyLogo.png" alt="Company Logo" width="320" height="320">
     <hr>
     <h2>Contact Us</h2>
     <h3>Phone number: +44 7678 456242</h3>
