--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -25,7 +25,7 @@
                 <a href="{{ url_for('home') }}">Home</a>
             </li>
             <li class="nav-item">
-                <a href="{{ url_for('data') }}">Data</a>
+                <a href="{{ url_for('products') }}">Products</a>
             </li>
             <li class="nav-item">
                 <a href="{{ url_for('tracking') }}">Order Tracking</a>
