--- a/flaskr/templates/product.html
+++ b/flaskr/templates/product.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% set active_page = "data" %}
+{% set active_page = "Product" %}
 
 <head>
-    {% block title %}Data{% endblock %}
+    {% block title %}Products{% endblock %}
 </head>
 
 {% block content %}
